--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,13 +3,14 @@ members = ["derive"]
 
 [package]
 name = "senax-encoder"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2021"
 description = "A fast, compact, and schema-evolution-friendly binary serialization library for Rust."
 authors = ["yossyX"]
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/yossyX/senax-encoder"
-keywords = ["senax", "encode", "serialize", "serializer"]
+keywords = ["senax", "encode", "serialize", "serializer", "binary"]
+categories = ["encoding"]
 
 [features]
 indexmap = ["dep:indexmap"]
@@ -21,7 +22,7 @@ serde_json = ["dep:serde_json"]
 
 [dependencies]
 thiserror = "1.0"
-senax-encoder-derive = { path = "./derive", version = "0.1.2" }
+senax-encoder-derive = { path = "./derive", version = "0.1.3" }
 bytes = "1.5"
 indexmap = { version = "2.2", optional = true }
 chrono = { version = "0.4", optional = true }
