--- a/derive/Cargo.toml
+++ b/derive/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "senax-encoder-derive"
-version = "0.1.14"
+version = "0.1.15"
 edition = "2021"
 description = "A fast, compact, and schema-evolution-friendly binary serialization library for Rust."
 authors = ["yossyX"]
@@ -9,6 +9,9 @@ repository = "https://github.com/yossyX/senax-encoder"
 
 [lib]
 proc-macro = true
+
+[features]
+pack = []
 
 [dependencies]
 syn = { version = "2.0", features = ["full"] }
