--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ members = ["derive"]
 
 [package]
 name = "senax-encoder"
-version = "0.1.15"
+version = "0.1.16"
 edition = "2021"
 description = "A fast, compact, and schema-evolution-friendly binary serialization library for Rust."
 authors = ["yossyX"]
@@ -14,6 +14,9 @@ categories = ["encoding"]
 readme = "README.md"
 
 [features]
+default = ["vec_u8", "encode"]
+vec_u8 = []
+encode = ["senax-encoder-derive/encode"]
 pack = ["senax-encoder-derive/pack"]
 indexmap = ["dep:indexmap"]
 chrono = ["dep:chrono"]
@@ -27,7 +30,7 @@ smol_str = ["dep:smol_str"]
 
 [dependencies]
 thiserror = "1.0"
-senax-encoder-derive = { path = "./derive", version = "0.1.15" }
+senax-encoder-derive = { path = "./derive", version = "0.1.16" }
 bytes = "1.5"
 indexmap = { version = "2.2", optional = true }
 chrono = { version = "0.4", optional = true }
